# graphics-sandbox

./: .gitignore  CMakeLists.txt  LICENSE  README.md  vcpkg.json
cmake/: ensure_vcpkg.cmake
scripts/: linux-setup.sh  setup-windows.bat
src/: glfw_hello_world.cpp  main.cpp
src/application/: application.cpp  application.hpp
src/platform/: platform.cpp  platform.hpp
src/ui/: imgui_renderer.hpp
